--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<groupId>net.slipp</groupId>
 	<artifactId>my-slipp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>my-slipp</name>
-	<packaging>war</packaging>
 	<description>SLiPP Q&amp;A</description>
 
 	<properties>
@@ -44,11 +44,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
